--- a/hotels/templates/hotels/room_detail.html
+++ b/hotels/templates/hotels/room_detail.html
@@ -31,12 +31,12 @@
           </div>
           <div class="col-md-8 text-center">
             <p> <br><br><br><br>
-            Hotel: <a href="{% url 'hotels:hotel_detail' hotel.id %}">{{ room.hotel }}</a><br>
-	    Number: {{ room.number }}<br>
-	    Beds: {{ room.beds }}<br>
-	    Description: {{ room.description }}<br>
-	    Cost per night: {{ room.cost }} EUR<br>
-        Available Services: 
+            <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Hotel: <a href="{% url 'hotels:hotel_detail' hotel.id %}">{{ room.hotel }}</a><br>
+	    <span class="glyphicon glyphicon-lamp" aria-hidden="true"></span> Number: {{ room.number }}<br>
+	    <span class="glyphicon glyphicon-bed" aria-hidden="true"></span> Beds: {{ room.beds }}<br>
+	    <span class="glyphicon glyphicon glyphicon-comment" aria-hidden="true"></span> Description: {{ room.description }}<br>
+	    <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> Cost per night: {{ room.cost }} EUR<br>
+        <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> Available Services: 
         <ul>
         {% for service in services %}
         	<li>{{ service.name }}</li>
