--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 
 {% block cover %}
  <div class="cover" style="background-image: url({% static 'images/login.jpg' %});  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
+ <br><br><br><br><br>
+ <div style="background: rgba(255,255,255, 0.7); width: 80%; height: 650px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 {% block covercontent %}
 <head>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.css">
@@ -15,15 +17,44 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.js"></script>
 {{ form.media }}
-</head>
+ 
     <table align="center">
+    	<tr>
+ 	 	<th>
+ 	 	<div>
+ 	 		<h1 align="center">Welcome to VMhotels</h1>		
+ 	 	</div>
+ 	 	</th>
+ 	 </tr>
+ 	 <tr>
+ 	 	<th>
+ 	 	<div align="center">
+ 	 		
+ 	 		{% if user.is_authenticated %} 
+              			<h1> {{ user.username }} </h1> 
+              			<a href="{% url 'portal:logout_view' %}"><button type="button" class="btn btn-danger">Logout</button></a>
+              			<p align="center">
+ 				<SCRIPT LANGUAGE="JavaScript">
+					document.write("You've been here <b>" + amt() + "</b> times.")
+				</SCRIPT>
+  </p>
+              		{% else %}
+              			<a href="{% url 'portal:django.contrib.auth.views.login' %}"><button type="button" class="btn btn-success">Login</button></a>
+ 	 			<a href="{% url 'portal:registration_register_customer' %}"><button type="button" class="btn btn-success">Sign in as customer</button></a>
+ 	 			<a href="{% url 'portal:registration_register_owner' %}"><button type="button" class="btn btn-success">Sign in as owner</button></a>
+	      		{% endif %}  
+		</div>
+		</th>
+	</tr>
  	 <tr>
     		<th>
-    		<div class="container" style="margin-top: 5cm;">
+    		
+    		<div class="container" style="margin-top: 2cm;">
     			<div class="row" align="center">
 				<form action="{% url 'main_page' %}" method="post">
 					{% csrf_token %}
 					 <div class="row">
+					 
         					<div class="col-md-3">
           						{%  bootstrap_field form.dest %}
         					</div>
@@ -53,35 +84,9 @@
  	 </tr>
  	 <br>
  	 <br>
- 	 <tr>
- 	 	<th>
- 	 	<div>
- 	 		<h1 align="center">Welcome to VMhotels</h1>		
- 	 	</div>
- 	 	</th>
- 	 </tr>
- 	 <tr>
- 	 	<th>
- 	 	<div align="center">
- 	 		
- 	 		{% if user.is_authenticated %} 
-              			<h1> {{ user.username }} </h1> 
-              			<a href="{% url 'portal:logout_view' %}"><button type="button" class="btn btn-danger">Logout</button></a>
-              			<p align="center">
- 				<SCRIPT LANGUAGE="JavaScript">
-					document.write("You've been here <b>" + amt() + "</b> times.")
-				</SCRIPT>
-  </p>
-              		{% else %}
-              			<a href="{% url 'portal:django.contrib.auth.views.login' %}"><button type="button" class="btn btn-success">Login</button></a>
- 	 			<a href="{% url 'portal:registration_register_customer' %}"><button type="button" class="btn btn-success">Sign in as customer</button></a>
- 	 			<a href="{% url 'portal:registration_register_owner' %}"><button type="button" class="btn btn-success">Sign in as owner</button></a>
-	      		{% endif %}  
- 	 		<br>
-		</div>
-		</th>
-	</tr>
+ 	 
     </table>
+  </div>
 {% endblock %}
 {% endblock %}
 {% block footer %}
