--- a/templates/index.html
+++ b/templates/index.html
@@ -59,15 +59,19 @@
 					 <div class="row">
 					 
         					<div class="col-md-3">
+        						<span class="glyphicon glyphicon-plane" aria-hidden="true"></span>
           						{%  bootstrap_field form.dest %}
         					</div>
         					<div class="col-md-2">
+        						 <span class="glyphicon glyphicon-bed" aria-hidden="true"></span>
          						 {%  bootstrap_field form.beds %}
         					</div>
         					<div class="col-md-3">
+        						 <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
          						 {%  bootstrap_field form.checkin %}
         					</div>
         					<div class="col-md-3">
+        						 <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
          						 {%  bootstrap_field form.checkout %}
         					</div><br>
         					<div class="col-md-1">
