--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -44,9 +44,9 @@
 <a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-success" %}</a>
 <a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-success" %}</a>
 {% endif %}
-{% if customer %}
-AGGIUNGERE ROBA QUI
-{% endif %}
+<!--{% if customer %}-->
+<!--AGGIUNGERE ROBA QUI-->
+<!--{% endif %}-->
 <a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-danger" %}</a>
 </div>
 </div>
