--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -41,9 +41,10 @@
 {% endif %}
 <br><br><br><br><br><br><br><br><br>
 {% if owner %}
-<a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-success" %}</a>
-<a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-success" %}</a>
+<a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-default" %}</a>
+<a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-default" %}</a>
 {% endif %}
+<a href="{% url 'main_page' %}">{% bootstrap_button "Search" button_type="link" name="Search" button_class="btn-default" %}</a>
 <!--{% if customer %}-->
 <!--AGGIUNGERE ROBA QUI-->
 <!--{% endif %}-->
