--- a/hotels/templates/hotels/inserthotel.html
+++ b/hotels/templates/hotels/inserthotel.html
@@ -31,6 +31,7 @@
 		<br><br>
 		<div class="col-md-6 text-center">
 			{% bootstrap_button "Ok" button_type="submit" name="Create" button_class="btn-primary" icon="ok" %}
+			<input type="submit" onclick="clicked();" value="create" />
 		</div>
 </form>
 <a href="{% url 'portal:personal' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
