--- a/templates/base.html
+++ b/templates/base.html
@@ -154,6 +154,14 @@
 	}
 </script>
   	
-</script>
+ <script type="text/javascript">
+    function clicked() {
+       if (confirm('Do you want to submit?')) {
+           form.submit();
+       } else {
+           return false;
+       }
+    }
+    </script>
 </body>
 </html>
