--- a/hotels/templates/hotels/inserthotel.html
+++ b/hotels/templates/hotels/inserthotel.html
@@ -30,7 +30,7 @@
         	{% endfor %}
 		<br><br>
 		<div class="col-md-6 text-center">			
-			<button type="submit" class="btn btn-primary" value="create" name="create" onclick="clicked();"> Create
+			<button type="submit" class="btn btn-primary" value="create" name="create" onclick="clicked_check('The Hotel is properly inserted.');"> Create
    				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
 		</div>
