--- a/hotels/templates/hotels/insertroom.html
+++ b/hotels/templates/hotels/insertroom.html
@@ -18,7 +18,7 @@
 
 {% bootstrap_form form layout="horizontal" size='md' %}
 
-<button type="submit" class="btn btn-primary" value="Create" name="Create" onclick="clicked();"> Create
+<button type="submit" class="btn btn-primary" value="Create" name="Create" onclick="clicked_check('The room is properly inserted.');"> Create
    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 </button>
 
