Maledetti ctrl-c ctrl-v

--- a/hotels/templates/hotels/delhotel.html
+++ b/hotels/templates/hotels/delhotel.html
@@ -16,7 +16,7 @@
         {% csrf_token %}
         
         	<div class="col-md-6 text-center">
-        	<button type="submit" class="btn btn-primary" value="Yes" name="Ok" onclick="clicked_check('The room is removed properly.');"> Yes
+        	<button type="submit" class="btn btn-primary" value="Yes" name="Ok" onclick="clicked_check('The Hotel is removed properly.');"> Yes
    			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 		</button>
         	</div>
