--- a/review/templates/review/addreview.html
+++ b/review/templates/review/addreview.html
@@ -5,6 +5,7 @@
 {% bootstrap_javascript %}
 
 {% bootstrap_messages %}
+{% load staticfiles %}
 
 {% block covercontent %}
 <br><br><br><br><br>
@@ -17,7 +18,9 @@
         
         	{% bootstrap_form form layout="horizontal" size='md' %}
         	<div class="col-md-6 text-center">
-        	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
+        	<button type="submit" class="btn btn-primary" value="Ok" name="Ok" onclick="clicked_check('The review is properly inserted.');"> Ok
+   				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			</button>
         	</div>
 </form>
 <a href="{% url 'hotels:hotel_detail' hotel.pk%}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
