--- a/hotels/templates/hotels/room_detail.html
+++ b/hotels/templates/hotels/room_detail.html
@@ -13,12 +13,20 @@
 <h1>Camera {{ room.number }}</h1>
 </header>
 
-{% if error_message %}
-	<p><strong>{{ error_message }}</strong></p>
-{% endif %}
+ {% if messages %}
+
+    {% for msg in messages %}       
+   
+        <div class="alert alert-{{msg.level_tag}}" role="alert">
+ 	{{msg.message}}
+	</div>
+   
+    {% endfor %}
+
+  {% endif %}
 
 <div class="section">
-      <div class="container">
+      <div class="container">  
         <div class="row">
           <div class="col-md-4">
             <br>
