--- a/hotels/templates/hotels/room_detail.html
+++ b/hotels/templates/hotels/room_detail.html
@@ -8,7 +8,15 @@
 {% endif %}
 {% block covercontent %}
 <br><br><br><br><br><br><br>
-  	<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+  	
+  	{% if messages %}
+  		<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+  	{% endif %}
+  
+  	{% if not messages %}
+  		<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 400px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+  	{% endif %}
+  	
 <header>
 <h1>Camera {{ room.number }}</h1>
 </header>
