--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -3,7 +3,16 @@
 
 {% block covercontent %}
 <br><br><br><br><br><br>
-<div style="background: rgba(255,255,255, 0.7); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+
+{% if messages %}
+  	<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 600px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+{% endif %}
+  
+{% if not messages %}
+  	<div style="background: rgba(255,255,255, 0.7); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+{% endif %}
+
+
 <h1 align="center">Personal Page of {{ request.user }}</h1>
 <br>
 
@@ -22,7 +31,7 @@
 <div align="center">
 {% if owner %}
 <h2>Hotels:</h2>
-<div class="pre-scrollable" style="height:100px;">
+<div class="pre-scrollable" style="height:300px;">
 
 <ul>
 {% for h in hotel_list %}
@@ -52,7 +61,7 @@
 
 </div>
 {% endif %}
-<br><br><br><br><br><br><br><br><br>
+
 {% if owner %}
 <a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-default" %}</a>
 <a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-default" %}</a>
