--- a/templates/search.html
+++ b/templates/search.html
@@ -7,6 +7,7 @@
 <br><br><br><br><br><br><br>
 <div style="background: rgba(255,255,255, 0.9); width: 90%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h2>Hotels Found:</h2>
+</form>
     <br><br>
     <div class="pre-scrollable" style="height:600px;">
     <div class="section">
