tolte le pop up vecchie per gli hotel

--- a/hotels/templates/hotels/editroom.html
+++ b/hotels/templates/hotels/editroom.html
@@ -20,7 +20,7 @@
         
         		{% bootstrap_form form layout="horizontal" size='md' %}
         		<div class="col-md-6 text-center">
-        			<button type="submit" class="btn btn-primary" value="Ok" name="Ok" onclick="clicked_check('The room is successfully changed.');"> 						Ok
+        			<button type="submit" class="btn btn-primary" value="Ok" name="Ok"> 						Ok
    					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 				</button>
         		</div>
