--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -34,7 +34,7 @@
         	{% endfor %}
 		
         	<div class="col-md-6 text-center">
-        	<button type="submit" class="btn btn-primary" value="Ok" name="Ok" onclick="clicked_check('The Hotel is successfully changed.');"> 						Ok
+        			<button type="submit" class="btn btn-primary" value="Ok" name="Ok"> 						Ok
    					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 				</button>
         	</div>
