--- a/reservation/templates/reservation/addreservation.html
+++ b/reservation/templates/reservation/addreservation.html
@@ -28,7 +28,7 @@
         
         	{% bootstrap_form form layout="horizontal" size='md' %}
         	<div class="col-md-6 text-center">
-        	<button type="submit" class="btn btn-primary" value="Ok" name="Ok" onclick="clicked_check('The reservation is inserted properly.');"> Ok
+        	<button type="submit" class="btn btn-primary" value="Ok" name="Ok"> Ok
    			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 		</button>
         	</div>
