--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
   </p>
               		{% else %}
               			<a href="{% url 'portal:django.contrib.auth.views.login' %}"><button type="button" class="btn btn-success">Login</button></a>
- 	 			<a href="{% url 'portal:registration_register_customer' %}"><button type="button" class="btn btn-success">Sign in as customer</button></a>
- 	 			<a href="{% url 'portal:registration_register_owner' %}"><button type="button" class="btn btn-success">Sign in as owner</button></a>
+ 	 			<a href="{% url 'portal:registration_register_customer' %}"><button type="button" class="btn btn-success">Register as customer</button></a>
+ 	 			<a href="{% url 'portal:registration_register_owner' %}"><button type="button" class="btn btn-success">Register as owner</button></a>
 	      		{% endif %}  
 		</div>
 		</th>
